--- a/index.html
+++ b/index.html
@@ -1,9 +1,59 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hello World</title>
+	<title>Karla Ortiz</title>
+	<!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
+
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
+    <link rel = "stylesheet" href = "style.css">
+	<link href="https://fonts.googleapis.com/css?family=Great+Vibes|Gruppo" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Six+Caps" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
 </head>
 <body>
-	<h1>Hello World</h1>
+	<nav>
+	    <div class="nav-wrapper">
+	      <a href="#name" class="brand-logo">K</a>
+	      <ul id="nav-mobile" class="right hide-on-med-and-down">
+	        <li><a href="#projects">PROJECTS</a></li>
+	        <li><a href="#about">ABOUT</a></li>
+	        <li><a href="#contact">CONTACT</a></li>
+	        <li><a href="#skills">SKILLS</a></li>
+	        <li><a href="images/Resume.pdf" target="_blank">RESUME</a></li>
+	      </ul>
+	    </div>
+  	</nav>
+  	<div class="container">
+  		<div class="name">
+  			<h1 class="center" id="namePlate">KARLA ORTIZ</h1>
+  		</div>
+	  	<a name="projects">		
+		<h2 class="center">PROJECTS</h2>
+		<div id="project-images">
+			<div class="row">
+				<div class="col s4">
+					<a href="https://ortizk.github.io/triviaGame/home.html" target="_blank"><img src="images/project1.png"></a>
+				</div>
+				<div class="col s4">
+					<a href="http://blacktogreen.herokuapp.com/" target="_blank"><img src="images/project2.png"></a>
+				</div>
+				<div class="col s4">
+					<a href="https://ruffdateclient.herokuapp.com/" target="_blank"><img src="images/project3.png"></a>
+				</div>
+			</div>
+		</div>
+		<a name="about">		
+		<h2 class="center">ABOUT</h2>
+		<p>I am an artistically-inclined, analytical full stack web developer driven by clean code, products and design. While an independent thinker, I cultivate energy from my surroundings and community. It is this sense of connectedness that promotes my full-circle understanding of each element of a problem and project. With a balance between holistic comprehension, self-sufficiency and my ability to summarize personality, mood, and theme throughout my design. My products showcase my integrity to a high standard of deliverables. </p>
+		<a name="skills">		
+		<h2 class="center">SKILLS</h2>
+
+	</div>
+	<footer>
+		<a name="contact">								
+		<h3 class="center contact">CONTACT</h3>
+	</footer>	
 </body>
 </html>
