fixed spacing on projects and added logos'

--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
 <head>
 	<title>Karla Ortiz</title>
+	<!-- <link rel="stylesheet" href="animate.min.css">
+	<link rel="stylesheet" 
+	href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css"> -->
 	<!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
 
@@ -13,47 +16,89 @@
 	<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
 </head>
 <body>
-	<nav>
-	    <div class="nav-wrapper">
-	      <a href="#name" class="brand-logo">K</a>
-	      <ul id="nav-mobile" class="right hide-on-med-and-down">
-	        <li><a href="#projects">PROJECTS</a></li>
-	        <li><a href="#about">ABOUT</a></li>
-	        <li><a href="#contact">CONTACT</a></li>
-	        <li><a href="#skills">SKILLS</a></li>
-	        <li><a href="images/Resume.pdf" target="_blank">RESUME</a></li>
-	      </ul>
-	    </div>
-  	</nav>
+	<div class="navbar-fixed">
+		<nav>
+		    <div class="nav-wrapper">
+		      <a href="#name" class="brand-logo">K</a>
+		      <ul id="nav-mobile" class="right hide-on-med-and-down">
+		        <li><a href="#projects">PROJECTS</a></li>
+		        <li><a href="#about">ABOUT</a></li>
+		        <li><a href="#contact">CONTACT</a></li>
+		        <li><a href="#skills">SKILLS</a></li>
+		        <li><a href="images/Resume.pdf" target="_blank">RESUME</a></li>
+		      </ul>
+		    </div>
+	  	</nav>
+  	</div>
+  	<div class="name">
+  		<h1 class="center" id="namePlate">KARLA ORTIZ</h1>
+  	</div>
+<!-- 	<div>
+  	<div class="vl"></div>
+  	</div> -->
+  	<a name="projects">		
   	<div class="container">
-  		<div class="name">
-  			<h1 class="center" id="namePlate">KARLA ORTIZ</h1>
-  		</div>
-	  	<a name="projects">		
-		<h2 class="center">PROJECTS</h2>
-		<div id="project-images">
+  		<div class="fade">
+			<h2 class="center">PROJECTS</h2>
 			<div class="row">
-				<div class="col s4">
-					<a href="https://ortizk.github.io/triviaGame/home.html" target="_blank"><img src="images/project1.png"></a>
+				<div class="col m3">
+					<!-- <a href="https://ortizk.github.io/triviaGame/home.html" target="_blank"> --><img class="project-images" src="images/project1.jpg"></a>
 				</div>
-				<div class="col s4">
-					<a href="http://blacktogreen.herokuapp.com/" target="_blank"><img src="images/project2.png"></a>
+				<div class="col m3 offset-m1">
+					<a href="http://blacktogreen.herokuapp.com/" target="_blank"><img class="project-images" src="images/albumtemp.PNG"></a>
 				</div>
-				<div class="col s4">
-					<a href="https://ruffdateclient.herokuapp.com/" target="_blank"><img src="images/project3.png"></a>
+				<div class="col m3 offset-m1">
+					<a href="https://ruffdateclient.herokuapp.com/" target="_blank"><img class="project-images" src="images/project3.png"></a>
 				</div>
 			</div>
 		</div>
-		<a name="about">		
-		<h2 class="center">ABOUT</h2>
-		<p>I am an artistically-inclined, analytical full stack web developer driven by clean code, products and design. While an independent thinker, I cultivate energy from my surroundings and community. It is this sense of connectedness that promotes my full-circle understanding of each element of a problem and project. With a balance between holistic comprehension, self-sufficiency and my ability to summarize personality, mood, and theme throughout my design. My products showcase my integrity to a high standard of deliverables. </p>
-		<a name="skills">		
-		<h2 class="center">SKILLS</h2>
-
+		<div class="fade">		
+			<a name="about">
+			<h2 class="center">ABOUT</h2>
+			<p>I am an artistically-inclined, analytical full stack web developer driven by clean code, products and design. While an independent thinker, I cultivate energy from my surroundings and community. It is this sense of connectedness that promotes my full-circle understanding of each element of a problem and project. With a balance between holistic comprehension, self-sufficiency and my ability to summarize personality, mood, and theme throughout my design. My products showcase my integrity to a high standard of deliverables. </p>
+		</div>
+		<a name="skills">	
+		<div class="fade">	
+			<h2 class="center">SKILLS</h2>
+			<div class="row center">
+				<div class="col m6 fix">
+					<img class="skillLogo" src="images/js.png"><p class="skillP">JavaScript</p>
+				</div>
+				<div class="col m6 fix">
+					<img class="skillLogo" src="images/python.png"><p class="skillP">Python</p>
+				</div>
+			</div>
+			<div class="row center">
+				<div class="col m6 fix">
+					<img class="skillLogo" src="images/mongo.png"><p class="skillP">MongdDB</p>
+				</div>
+				<div class="col m6 fix">
+					<img class="skillLogo" src="images/django.png"><p class="skillP">Django</p>
+				</div>
+			</div>
+			<div class="row center">
+				<div class="col m6 fix">
+					<img class="skillLogo" src="images/materialize.jpg"><p class="skillP">Materialize</p>
+				</div>
+				<div class="col m6 fix">
+					<img class="skillLogo" src="images/bootstrap.jpg"><p class="skillP">Bootstrap</p>
+				</div>
+			</div>
+		</div>
 	</div>
 	<footer>
 		<a name="contact">								
 		<h3 class="center contact">CONTACT</h3>
-	</footer>	
+		<div class="row center">
+			<div class="col m12">	
+				<a href="https://www.linkedin.com/in/karla-ortiz/" target="_blank"><img class="skillLogo" src="images/linkIn.png"></a>
+				<img class="skillLogo" src="images/email.png">
+			</div>
+			<!-- <div class="col m6">
+			</div> -->
+		</div>
+	</footer>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script type="text/javascript" src="scripts.js"></script>	
 </body>
 </html>
