adjusted link issues

--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
 <!-- 	<div>
   	<div class="vl"></div>
   	</div> -->
-  	<a name="projects">		
+  	<a name="projects"></a>		
   	<div class="container">
   		<div class="fade">
 			<h2 class="center">PROJECTS</h2>
 			<div class="row">
 				<div class="col m3">
-					<!-- <a href="https://ortizk.github.io/triviaGame/home.html" target="_blank"> --><img class="project-images" src="images/project1.jpg"></a>
+					<a href="https://ortizk.github.io/triviaGame/home.html" target="_blank"><img class="project-images" src="images/project1.jpg"></a>
 				</div>
 				<div class="col m3 offset-m1">
 					<a href="http://blacktogreen.herokuapp.com/" target="_blank"><img class="project-images" src="images/albumtemp.PNG"></a>
@@ -53,11 +53,11 @@
 			</div>
 		</div>
 		<div class="fade">		
-			<a name="about">
+			<a name="about"></a>
 			<h2 class="center">ABOUT</h2>
 			<p>I am an artistically-inclined, analytical full stack web developer driven by clean code, products and design. While an independent thinker, I cultivate energy from my surroundings and community. It is this sense of connectedness that promotes my full-circle understanding of each element of a problem and project. With a balance between holistic comprehension, self-sufficiency and my ability to summarize personality, mood, and theme throughout my design. My products showcase my integrity to a high standard of deliverables. </p>
 		</div>
-		<a name="skills">	
+		<a name="skills"></a>	
 		<div class="fade">	
 			<h2 class="center">SKILLS</h2>
 			<div class="row center">
@@ -87,9 +87,8 @@
 		</div>
 	</div>
 	<footer>
-		<a name="contact">								
-		<h3 class="center contact">CONTACT</h3>
-		<div class="row center">
+		<a name="contact"></a>								
+		<div class="row center contactInfo">
 			<div class="col m12">	
 				<a href="https://www.linkedin.com/in/karla-ortiz/" target="_blank"><img class="skillLogo" src="images/linkIn.png"></a>
 				<img class="skillLogo" src="images/email.png">
