fixed font issues caused by closing a tag

--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
 
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
-    <link rel = "stylesheet" href = "style.css">
+    
 	<link href="https://fonts.googleapis.com/css?family=Great+Vibes|Gruppo" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Gruppo" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Six+Caps" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
+	<link rel = "stylesheet" href = "style.css">
 </head>
 <body>
 	<div class="navbar-fixed">
@@ -36,10 +38,10 @@
 <!-- 	<div>
   	<div class="vl"></div>
   	</div> -->
-  	<a name="projects"></a>		
   	<div class="container">
-  		<div class="fade">
-			<h2 class="center">PROJECTS</h2>
+  		<a name="projects"></a>	
+  		<div class="fade" name ="projects">
+			<h2 class="center font">PROJECTS</h2>
 			<div class="row">
 				<div class="col m3">
 					<a href="https://ortizk.github.io/triviaGame/home.html" target="_blank"><img class="project-images" src="images/project1.jpg"></a>
@@ -54,12 +56,12 @@
 		</div>
 		<div class="fade">		
 			<a name="about"></a>
-			<h2 class="center">ABOUT</h2>
-			<p>I am an artistically-inclined, analytical full stack web developer driven by clean code, products and design. While an independent thinker, I cultivate energy from my surroundings and community. It is this sense of connectedness that promotes my full-circle understanding of each element of a problem and project. With a balance between holistic comprehension, self-sufficiency and my ability to summarize personality, mood, and theme throughout my design. My products showcase my integrity to a high standard of deliverables. </p>
+			<h2 class="center font ">ABOUT</h2>
+			<p class="font center" >I am an artistically-inclined, analytical full stack web developer driven by clean code, products and design. While an independent thinker, I cultivate energy from my surroundings and community. It is this sense of connectedness that promotes my full-circle understanding of each element of a problem and project. With a balance between holistic comprehension, self-sufficiency and my ability to summarize personality, mood, and theme throughout my design. My products showcase my integrity to a high standard of deliverables. </p>
 		</div>
 		<a name="skills"></a>	
 		<div class="fade">	
-			<h2 class="center">SKILLS</h2>
+			<h2 class="center font ">SKILLS</h2>
 			<div class="row center">
 				<div class="col m6 fix">
 					<img class="skillLogo" src="images/js.png"><p class="skillP">JavaScript</p>
