started working on modals fixed some spacing

--- a/index.html
+++ b/index.html
@@ -5,14 +5,10 @@
 	<!-- <link rel="stylesheet" href="animate.min.css">
 	<link rel="stylesheet" 
 	href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css"> -->
-	<!-- Compiled and minified CSS -->
+    <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
-
-    <!-- Compiled and minified JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
     
 	<link href="https://fonts.googleapis.com/css?family=Great+Vibes|Gruppo" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Gruppo" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Six+Caps" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
 	<link rel = "stylesheet" href = "style.css">
@@ -35,9 +31,6 @@
   	<div class="name">
   		<h1 class="center" id="namePlate">KARLA ORTIZ</h1>
   	</div>
-<!-- 	<div>
-  	<div class="vl"></div>
-  	</div> -->
   	<div class="container">
   		<a name="projects"></a>	
   		<div class="fade" name ="projects">
@@ -89,17 +82,34 @@
 		</div>
 	</div>
 	<footer>
-		<a name="contact"></a>								
+		<a name="contact"></a>	
 		<div class="row center contactInfo">
-			<div class="col m12">	
+			<div class="col m12 s12">	
+				<h2 class="footer">CONTACT</h2>
 				<a href="https://www.linkedin.com/in/karla-ortiz/" target="_blank"><img class="skillLogo" src="images/linkIn.png"></a>
-				<img class="skillLogo" src="images/email.png">
-			</div>
-			<!-- <div class="col m6">
-			</div> -->
+				<!-- <img class="skillLogo" src="images/email.png"> -->
+
+
+		  <!-- Modal Trigger -->
+		<!-- <a class="waves-effect waves-light btn modal-trigger" href="#modal1">Email</a> -->
+
+		  <!-- Modal Structure -->
+<!-- 		<div id="modal1" class="modal">
+		    <div class="modal-content">
+		    	<h4>Get In Touch</h4>
+		      	<p>A bunch of text</p>
+		    </div>
+		    <div class="modal-footer">
+		      <a href="modal1" class="modal-close waves-effect waves-green btn-flat">Agree</a>
+		    </div>
+		</div> -->
+		<!-- Modal Structure END-->
 		</div>
 	</footer>
+
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
 	<script type="text/javascript" src="scripts.js"></script>	
 </body>
 </html>
