added git link and favicon

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" 
 	href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css"> -->
     <!-- Compiled and minified CSS -->
+    <link rel="icon" type="image/png" href="images/favicon.png" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
     
 	<link href="https://fonts.googleapis.com/css?family=Great+Vibes|Gruppo" rel="stylesheet">
@@ -56,27 +57,33 @@
 		<div class="fade">	
 			<h2 class="center font ">SKILLS</h2>
 			<div class="row center">
-				<div class="col m6 fix">
+				<div class="col m6 s12 fix">
 					<img class="skillLogo" src="images/js.png"><p class="skillP">JavaScript</p>
 				</div>
-				<div class="col m6 fix">
+				<div class="col m6 s12 fix">
 					<img class="skillLogo" src="images/python.png"><p class="skillP">Python</p>
 				</div>
 			</div>
 			<div class="row center">
-				<div class="col m6 fix">
-					<img class="skillLogo" src="images/mongo.png"><p class="skillP">MongdDB</p>
+				<div class="col m6 s12 fix">
+					<img class="skillLogo" src="images/mongo.png"><p class="skillP">Mongo</p>
 				</div>
-				<div class="col m6 fix">
+				<div class="col m6 s12 fix">
 					<img class="skillLogo" src="images/django.png"><p class="skillP">Django</p>
 				</div>
 			</div>
 			<div class="row center">
-				<div class="col m6 fix">
+				<div class="col m6 s12 fix">
 					<img class="skillLogo" src="images/materialize.jpg"><p class="skillP">Materialize</p>
 				</div>
-				<div class="col m6 fix">
+				<div class="col m6 s12 fix">
 					<img class="skillLogo" src="images/bootstrap.jpg"><p class="skillP">Bootstrap</p>
+				</div>
+				<div class="col m6 s12 fix">
+					<img class="skillLogo" src="images/nodejs.png"><p class="skillP">Node</p>
+				</div>
+				<div class="col m6 s12 fix">
+					<img class="skillLogo" src="images/express.png"><p class="skillP">Express</p>
 				</div>
 			</div>
 		</div>
@@ -86,12 +93,18 @@
 		<div class="row center contactInfo">
 			<div class="col m12 s12">	
 				<h2 class="footer">CONTACT</h2>
-				<a href="https://www.linkedin.com/in/karla-ortiz/" target="_blank"><img class="skillLogo" src="images/linkIn.png"></a>
-				
-
-
-		  <!-- Modal Trigger -->
-		<a class="modal-trigger" href="#modal1"><img class="skillLogo" src="images/email.png"></a>
+			<div class="row">	
+				<div class="col m4 s12">
+					<a href="https://www.linkedin.com/in/karla-ortiz/" target="_blank"><img class="skillLogo" src="images/linkIn.png"></a>
+				</div>
+				<div class="col m4 s12">
+					<!-- Modal Trigger -->
+					<a class="modal-trigger" href="#modal1"><img class="skillLogo" src="images/email.png"></a>
+				</div>
+				<div class="col m4 s12">
+					<a href="https://github.com/ortizk" target="_blank"><img class="skillLogo" src="images/github.png"></a>
+				</div>
+			</div>
 
 		  <!-- Modal Structure -->
 		<div id="modal1" class="modal">
@@ -111,6 +124,7 @@
 		</div>
 		<!-- Modal Structure END-->
 		</div>
+	
 
 	</footer>
 
