--- a/index.html
+++ b/index.html
@@ -35,9 +35,10 @@
   		<h1 class="center" id="namePlate">KARLA ORTIZ</h1>
   	</div>
   	<div class="container">
-  		<a name="projects"></a>	
+  		<!-- <a name="projects"></a>	 -->
+  		<!-- <div class="vl"></div> -->
   		<div class="fade" name ="projects">
-			<h2 class="center font">PROJECTS</h2>
+			<a name="projects"><h2 class="center font">PROJECTS</h2></a>
 			<div class="row center">
 				<div class="col m6">
 					<!-- Modal Trigger -->
@@ -133,11 +134,11 @@
 		  			</div>
 		  		</div>
 		  		<div class="row">
-		  			<div class="col m9">
+		  			<div class="col s12 m9">
 		  				<img class="" src="images/offleashMU.png">
 		  			</div>
-		  			<div class="col m3">
-		  				<p class="font info-font">Dogs need friends too! An app for dogs and their owners. Allows users to find other dogs in their area for walks and play dates</p>
+		  			<div class="col s12 m3">
+		  				<p class="font info-font">Dogs need friends too! An app for dogs and their owners. OffLeash allows users to find other dogs in their area for walks and play dates</p>
 		  			</div>
 		  		</div>
 		  		<div class="row">
@@ -151,14 +152,15 @@
 		</div>
 		<!-- Modal Structure END-->
 
-
+		<div class="vl fade"></div>
 		<div class="fade">		
 			<a name="about"></a>
 			<h2 class="center font ">ABOUT</h2>
 			<p class="font info-font center" >I am an artistically-inclined, analytical full stack web developer driven by clean code, products and design. While an independent thinker, I cultivate energy from my surroundings and community. It is this sense of connectedness that promotes my full-circle understanding of each element of a problem and project. With a balance between holistic comprehension, self-sufficiency and my ability to summarize personality, mood, and theme throughout my design. My products showcase my integrity to a high standard of deliverables. </p>
 		</div>
-		<a name="skills"></a>	
+		<div class="vl fade"></div>
 		<div class="fade">	
+		<a name="skills"></a>	
 			<h2 class="center font ">SKILLS</h2>
 			<div class="row center">
 				<div class="col m6 s12 fix">
@@ -193,10 +195,8 @@
 		</div>
 	</div>
 	<footer>
+		<!-- <div class="vl fade"></div> -->
 		<a name="contact"></a>	
-		<!-- <div class="row center contactInfo">
-			<div class="col m12 s12">	
-				<h2 class="footer">CONTACT</h2> -->
 			<div class="row contactInfo center">	
 				<div class="col m12">
 					<a href="https://github.com/ortizk" target="_blank"><img class="git-logo contact-logo" src="images/github.png"></a>
