--- a/index.html
+++ b/index.html
@@ -56,6 +56,42 @@
 				</div>
 			</div>
 		</div>
+
+				<div class="vl fade"></div>
+		<div class="fade">	
+		<a name="skills"></a>	
+			<h2 class="center font ">SKILLS</h2>
+			<div class="row center">
+				<div class="col m6 s12 fix">
+					<img class="skillLogo" src="images/js.png"><p class="skillP">JavaScript</p>
+				</div>
+				<div class="col m6 s12 fix">
+					<img class="skillLogo" src="images/python.png"><p class="skillP">Python</p>
+				</div>
+			</div>
+			<div class="row center">
+				<div class="col m6 s12 fix">
+					<img class="skillLogo" src="images/mongo.png"><p class="skillP">Mongo</p>
+				</div>
+				<div class="col m6 s12 fix">
+					<img class="skillLogo" src="images/django.png"><p class="skillP">Django</p>
+				</div>
+			</div>
+			<div class="row center">
+				<div class="col m6 s12 fix">
+					<img class="skillLogo" src="images/materialize.jpg"><p class="skillP">Materialize</p>
+				</div>
+				<div class="col m6 s12 fix">
+					<img class="skillLogo" src="images/bootstrap.jpg"><p class="skillP">Bootstrap</p>
+				</div>
+				<div class="col m6 s12 fix">
+					<img class="skillLogo" src="images/nodejs.png"><p class="skillP">Node</p>
+				</div>
+				<div class="col m6 s12 fix">
+					<img class="skillLogo" src="images/express.png"><p class="skillP">Express</p>
+				</div>
+			</div>
+		</div>
 		
 
 		<!-- Modal Structure PROJECT 1 -->
@@ -158,45 +194,12 @@
 			<h2 class="center font ">ABOUT</h2>
 			<p class="font info-font center" >I am an artistically-inclined, analytical full stack web developer driven by clean code, products and design. While an independent thinker, I cultivate energy from my surroundings and community. It is this sense of connectedness that promotes my full-circle understanding of each element of a problem and project. With a balance between holistic comprehension, self-sufficiency and my ability to summarize personality, mood, and theme throughout my design. My products showcase my integrity to a high standard of deliverables. </p>
 		</div>
-		<div class="vl fade"></div>
-		<div class="fade">	
-		<a name="skills"></a>	
-			<h2 class="center font ">SKILLS</h2>
-			<div class="row center">
-				<div class="col m6 s12 fix">
-					<img class="skillLogo" src="images/js.png"><p class="skillP">JavaScript</p>
-				</div>
-				<div class="col m6 s12 fix">
-					<img class="skillLogo" src="images/python.png"><p class="skillP">Python</p>
-				</div>
-			</div>
-			<div class="row center">
-				<div class="col m6 s12 fix">
-					<img class="skillLogo" src="images/mongo.png"><p class="skillP">Mongo</p>
-				</div>
-				<div class="col m6 s12 fix">
-					<img class="skillLogo" src="images/django.png"><p class="skillP">Django</p>
-				</div>
-			</div>
-			<div class="row center">
-				<div class="col m6 s12 fix">
-					<img class="skillLogo" src="images/materialize.jpg"><p class="skillP">Materialize</p>
-				</div>
-				<div class="col m6 s12 fix">
-					<img class="skillLogo" src="images/bootstrap.jpg"><p class="skillP">Bootstrap</p>
-				</div>
-				<div class="col m6 s12 fix">
-					<img class="skillLogo" src="images/nodejs.png"><p class="skillP">Node</p>
-				</div>
-				<div class="col m6 s12 fix">
-					<img class="skillLogo" src="images/express.png"><p class="skillP">Express</p>
-				</div>
-			</div>
-		</div>
+
 	</div>
 	<footer>
 		<!-- <div class="vl fade"></div> -->
 		<a name="contact"></a>	
+		<h3 class="center font contactH">get in touch</h3>
 			<div class="row contactInfo center">	
 				<div class="col m12">
 					<a href="https://github.com/ortizk" target="_blank"><img class="git-logo contact-logo" src="images/github.png"></a>
