--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		        <li><a href="#about">ABOUT</a></li>
 		        <li><a href="#contact">CONTACT</a></li>
 		        <li><a href="#skills">SKILLS</a></li>
-		        <li><a href="images/Resume2.pdf" target="_blank">RESUME</a></li>
+		        <li><a href="images/KarlaOrtizResume.pdf" target="_blank">RESUME</a></li>
 		      </ul>
 		    </div>
 	  	</nav>
