--- a/index.html
+++ b/index.html
@@ -39,6 +39,30 @@
 	<div class="fade">
 		<div class="row">
 			<div class="col s12">
+  				<h4 class="font">OffLeash</h4>
+  				<h5 class="font">React | Axios | CSS | Jquery | Materialize | Mongo</h5>
+  			</div>
+  		</div>
+  		<div class="row">
+  			<div class="col s12">
+  				<img class="projectImg rightHandImg" src="images/offleashMU.png">
+  				<p class="font info-font">Dogs need friends too! An app for dogs and their owners. OffLeash allows users to find other dogs in their area for walks and play dates.</p>
+  				<p class="font info-font">To test it out, use this log in info: 
+  				<br/>
+  				username: victor@victor.com 
+				<br/>
+  				password: victorvictor 
+				<br/>
+  				zip:98104</p>
+  				<a class="project-btn" href="https://ruffdateclient.herokuapp.com/" target="_blank">Live Site</a>
+  				<a class="project-btn" href="https://github.com/ortizk/pupDate" target="_blank">GitHub</a>
+  			</div>
+  		</div>
+	</div>
+	<div class="vlDemi fade"></div>
+	<div class="fade">
+		<div class="row">
+			<div class="col s12">
   				<h4 class="font">Trivia Night</h4>
   				<h5 class="font">Javascript | HTML | CSS | Jquery</h5>
   			</div>
@@ -73,28 +97,8 @@
   			</div>
   		</div>
 	</div>
-	<div class="vlDemi fade"></div>
-	<div class="fade">
-		<div class="row">
-			<div class="col s12">
-  				<h4 class="font">OffLeash</h4>
-  				<h5 class="font">React | Axios | CSS | Jquery | Materialize | Mongo</h5>
-  			</div>
-  		</div>
-  		<div class="row">
-  			<div class="col s12 m6">
-  				<img class="projectImg" src="images/offleashMU.png">
-  			</div>
-  			<div class="col s12 m6">
-  				<p class="font info-font">Dogs need friends too! An app for dogs and their owners. OffLeash allows users to find other dogs in their area for walks and play dates</p>
-  				<a class="project-btn" href="https://ruffdateclient.herokuapp.com/" target="_blank">Live Site</a>
-  				<a class="project-btn" href="https://github.com/ortizk/pupDate" target="_blank">GitHub</a>
-  			</div>
-  		</div>
-	</div>
-
 	<div class="vl fade"></div>
-	<div class="fade">	
+	<!-- <div class="fade">	 -->
 		<a name="skills"></a>	
 		<h2 class="center font">SKILLS</h2>
 		<div class="container">
@@ -103,7 +107,39 @@
 					<img class="skillLogo" src="images/js.png"><p class="skillP">JavaScript</p>
 				</div>
 				<div class="col m6 s7 fix">
+					<img class="skillLogo" src="images/jquery.png"><p class="skillP">JQuery</p>
+				</div>
+			</div>
+			<div class="row center">
+				<div class="col m6 s5 fix">
+					<img class="skillLogo" src="images/react.png"><p class="skillP">React</p>
+				</div>
+				<div class="col m6 s7 fix">
+					<img class="skillLogo" src="images/JSX.png"><p class="skillP">JSX</p>
+				</div>
+			<div class="row center">
+				<div class="col m6 s5 fix">
+					<img class="skillLogo" src="images/postgreesql.png"><p class="skillP">Postgres</p>
+				</div>
+				<div class="col m6 s7 fix">
 					<img class="skillLogo" src="images/python.png"><p class="skillP">Python</p>
+				</div>
+				
+			</div>
+			<div class="row center">
+				<div class="col m6 s5 fix">
+					<img class="skillLogo" src="images/materialize.jpg"><p class="skillP">Materialize</p>
+				</div>
+				<div class="col m6 s7 fix">
+					<img class="skillLogo" src="images/bootstrap.jpg"><p class="skillP">Bootstrap</p>
+				</div>
+			</div>
+			<div class="row center">
+				<div class="col m6 s5 fix">
+					<img class="skillLogo" src="images/nodejs.png"><p class="skillP">Node</p>
+				</div>
+				<div class="col m6 s7 fix">
+					<img class="skillLogo" src="images/express.png"><p class="skillP">Express</p>
 				</div>
 			</div>
 			<div class="row center">
@@ -116,18 +152,12 @@
 			</div>
 			<div class="row center">
 				<div class="col m6 s5 fix">
-					<img class="skillLogo" src="images/materialize.jpg"><p class="skillP">Materialize</p>
+					<img class="skillLogo" src="images/heroku.png"><p class="skillP">Heroku</p>
 				</div>
 				<div class="col m6 s7 fix">
-					<img class="skillLogo" src="images/bootstrap.jpg"><p class="skillP">Bootstrap</p>
-				</div>
-				<div class="col m6 s5 fix">
-					<img class="skillLogo" src="images/nodejs.png"><p class="skillP">Node</p>
-				</div>
-				<div class="col m6 s7 fix">
-					<img class="skillLogo" src="images/express.png"><p class="skillP">Express</p>
-				</div>
-			</div>
+					<img class="skillLogo" src="images/bcrypt.png"><p class="skillP">BCrypt</p>
+		
+		</div>		</div>
 		</div>
 	</div>
 
@@ -135,7 +165,12 @@
 	<div class="fade about">		
 		<a name="about"></a>
 		<h2 class="center font">ABOUT</h2>
-		<p class="font info-font center intro preamble" >I am an artistically-inclined, analytical full stack web developer driven by clean code, products and design. While an independent thinker, I cultivate energy from my surroundings and community. It is this sense of connectedness that promotes my full-circle understanding of each element of a problem and project. With a balance between holistic comprehension, self-sufficiency and my ability to summarize personality, mood, and theme throughout my design. My products showcase my integrity to a high standard of deliverables. </p>
+		<div class="container">
+		<div class="row">
+			<p class="font info-font col m6 s12"><span id="firstLine">I am a creative, </span>analytical full stack web developer driven by clean code, products and design. While an independent thinker, I cultivate energy from my surroundings and community. It is this sense of connectedness that promotes my full-circle understanding </p>
+			<p class="font info-font col m6 s12" id="secondBioCol"> of each element of a problem and project. With a balance between holistic comprehension, self-sufficiency and my ability to summarize personality, mood, and theme throughout my design. My products showcase my integrity to a high standard of deliverables. </p>
+		</div>
+	</div>
 	</div>
 
 <footer>
