made more more responsive and targeted be

--- a/index.html
+++ b/index.html
@@ -33,7 +33,15 @@
 	  	</nav>
   	</div>
   	<div class="name row">
-  		<h1 class="center" id="namePlate">KARLA ORTIZ</h1>
+  		<div class="col m6 noPadding">
+  			<img class="openingImage" src="images/titleimg.jpg">
+  		</div>
+  		<div class="col m6">
+  			<br>
+  			<br>
+  			<h1 id="namePlate" class="mediaCenter">Karla Ortiz</h1>
+  			<h4 class="font mediaCenter">A full stack web developer with a backend focus.</h4>
+  		</div>
   	</div>
 	<a name="projects"><h2 class="center font fade">PROJECTS</h2></a>
 	<div class="fade">
@@ -167,8 +175,8 @@
 		<h2 class="center font">ABOUT</h2>
 		<div class="container">
 		<div class="row">
-			<p class="font info-font col m6 s12"><span id="firstLine">I am a creative, </span>analytical full stack web developer driven by clean code, products and design. While an independent thinker, I cultivate energy from my surroundings and community. It is this sense of connectedness that promotes my full-circle understanding </p>
-			<p class="font info-font col m6 s12" id="secondBioCol"> of each element of a problem and project. With a balance between holistic comprehension, self-sufficiency and my ability to summarize personality, mood, and theme throughout my design. My products showcase my integrity to a high standard of deliverables. </p>
+			<p class="font info-font col m6 s12 mediaCenter"><span id="firstLine">I am a creative, </span>analytical full stack web developer driven by clean code, products and design. While an independent thinker, I cultivate energy from my surroundings and community. It is this sense of connectedness that promotes my full-circle understanding </p>
+			<p class="font info-font col m6 s12 mediaCenter" id="secondBioCol"> of each element of a problem and project. With a balance between holistic comprehension, self-sufficiency and my ability to summarize personality, mood, and theme throughout my design. My products showcase my integrity to a high standard of deliverables. </p>
 		</div>
 	</div>
 	</div>
