took away box shadow on nav

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 </head>
 <body>
 	<div class="navbar-fixed">
-		<nav>
+		<nav class="z-depth-0">
 		    <div class="nav-wrapper">
-		      <a href="#name" class="brand-logo">K</a>
+		      <!-- <img class="brand-logo" src="images/code.png"> -->
 		      <ul id="nav-mobile" class="right hide-on-med-and-down">
 		        <li><a href="#projects">PROJECTS</a></li>
 		        <li><a href="#skills">SKILLS</a></li>
