moved and changed about section

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 		    <div class="nav-wrapper">
 		      <!-- <img class="brand-logo" src="images/code.png"> -->
 		      <ul id="nav-mobile" class="right hide-on-med-and-down">
+		      	<li><a href="#about">ABOUT</a></li>
 		        <li><a href="#projects">PROJECTS</a></li>
 		        <li><a href="#skills">SKILLS</a></li>
-		        <li><a href="#about">ABOUT</a></li>
 		        <li><a href="#contact">CONTACT</a></li>
 		        <li><a href="images/KarlaOrtizResume.pdf" target="_blank">RESUME</a></li>
 		      </ul>
@@ -43,6 +43,22 @@
   			<h4 class="font mediaCenter">A full stack web developer with a backend focus.</h4>
   		</div>
   	</div>
+
+
+
+<div class="vlDemi fade"></div>
+	<div class="fade about">		
+		<a name="about"></a>
+		<h2 class="center font">ABOUT</h2>
+		<div class="container">
+		<div class="row">
+			<p class="font info-font col m6 s12 mediaCenter"><span id="firstLine">I am a creative, </span>analytical full stack web developer driven by clean code, products and design. While an independent thinker, I cultivate energy from my surroundings and community. It is this sense of connectedness that promotes my full-circle understanding of each element of a problem and project. With </p>
+			<p class="font info-font col m6 s12 mediaCenter" id="secondBioCol">a balance between holistic comprehension, self-sufficiency and my ability to summarize personality, mood, and theme throughout my design. These skills have led me to create full stack web applications with numerous of the latest technologies and propels my desire to learn more.   </p>
+		</div>
+	</div>
+	</div>
+
+  	<div class="vl fade"></div>
 	<a name="projects"><h2 class="center font fade">PROJECTS</h2></a>
 	<div class="fade">
 		<div class="row">
@@ -167,18 +183,6 @@
 		
 		</div>		</div>
 		</div>
-	</div>
-
-	<div class="vl fade"></div>
-	<div class="fade about">		
-		<a name="about"></a>
-		<h2 class="center font">ABOUT</h2>
-		<div class="container">
-		<div class="row">
-			<p class="font info-font col m6 s12 mediaCenter"><span id="firstLine">I am a creative, </span>analytical full stack web developer driven by clean code, products and design. While an independent thinker, I cultivate energy from my surroundings and community. It is this sense of connectedness that promotes my full-circle understanding </p>
-			<p class="font info-font col m6 s12 mediaCenter" id="secondBioCol"> of each element of a problem and project. With a balance between holistic comprehension, self-sufficiency and my ability to summarize personality, mood, and theme throughout my design. My products showcase my integrity to a high standard of deliverables. </p>
-		</div>
-	</div>
 	</div>
 
 <footer>
