changed working in bio

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 		<div class="container">
 		<div class="row">
 			<p class="font info-font col m6 s12 mediaCenter"><span id="firstLine">I am a creative, </span>analytical full stack web developer driven by clean code, products and design. While an independent thinker, I cultivate energy from my surroundings and community. It is this sense of connectedness that promotes my full-circle understanding of each element of a problem and project. With </p>
-			<p class="font info-font col m6 s12 mediaCenter" id="secondBioCol">a balance between holistic comprehension, self-sufficiency and my ability to summarize personality, mood, and theme throughout my design. These skills have led me to create full stack web applications with numerous of the latest technologies and propels my desire to learn more.   </p>
+			<p class="font info-font col m6 s12 mediaCenter" id="secondBioCol">a balance between holistic comprehension, self-sufficiency and my ability to summarize personality, mood, and theme throughout my design. These skills have led me to create full stack web applications with a multitude of the latest technologies and propels my desire to learn more.   </p>
 		</div>
 	</div>
 	</div>
