added new feature notice

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 		<div class="row">
 			<div class="col s12">
   				<h4 class="font">OffLeash</h4>
+  				<p class='newFeature'>NEW FEATURE! - image upload!</p>
   				<h5 class="font">React | Axios | CSS | Jquery | Materialize | Mongo</h5>
   			</div>
   		</div>
