moved new feature so doesnt interfere with fading

--- a/index.html
+++ b/index.html
@@ -61,8 +61,7 @@
 	<div class="fade">
 		<div class="row">
 			<div class="col s12">
-  				<h4 class="font">OffLeash</h4>
-  				<p class='newFeature'>NEW FEATURE! - image upload!</p>
+  				<h4 class="font">OffLeash <span class='newFeature'>NEW FEATURE! - image upload!<span></h4>
   				<h5 class="font">React | Axios | CSS | Jquery | Materialize | Mongo</h5>
   			</div>
   		</div>
